# pro-bots

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  environment.sh  fixtures.py  pyproject.toml  pytest.ini  repl.py  requirements.txt  startup.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 6d3427d14748_adding_persistent_player_properties.py  a365f409d59e_users_and_programs.py  c793be362bfa_add_users_admin.py
backend/fixtures/: admin.probot  bot-giver.probot  bot-tagger.probot  bot-walker.probot
backend/probots/: app.py  db.py  scheduled_tasks.py
backend/probots/controllers/: __init__.py  base.py  login.py  messages.py  root.py  users.py
backend/probots/models/: all.py  asic_profile.py  message.py  program.py  session.py  user.py  websocket.py
backend/probots/models/game/: all.py  color_scheme.py  grid.py  map.py  player.py  probot.py  program.py  transition.py
backend/probots/models/mixins/: __init__.py  named.py  pkid.py  pydantic_base.py  timestamped.py
backend/probots/probotics/: codegen.py  compiler.py  interpreter.py  probotics-grammar.ebnf
backend/probots/probotics/ops/: all.py  arithmetic.py  assignment.py  base.py  call.py  comparison.py  flow_control.py  logical.py  native.py  objects.py  primitive.py  stack_frame.py  symbol.py
backend/probots/services/: all.py  dispatcher.py  login_service.py  monitor.py  ping_service.py  program_service.py  session_service.py
backend/probots/services/game/: builtins.py  coloring.py  energy.py  engine.py  giving.py  inspection.py  map_maker.py  movement.py  processor.py  programming.py  saying.py  transitioner.py  utils.py
backend/probots/services/game/builtin/: all.py  base.py  collect.py  give.py  inspect.py  me.py  movement.py  players.py  print.py  random.py  say.py  types.py
backend/probots/services/message_handlers/: all.py  base.py  connection_handler.py  game_handler.py  manual_control_handler.py  terminal_handler.py  user_handler.py
backend/probots/test/probotics_tests/: compiler_tests.py  interpreter_tests.py  sample.probot
backend/probots/utils/: callback_dict.py  validate_pydantic_response.py
frontend/: Dockerfile  (+2 more)
(+45 files in other folders)
